--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,131 @@
 # Environment files
 .env
 .env.stage
+.env.local
+.env.development
+.env.production
 *.env
 
 # Python virtual environment
 venv/
+.venv/
+env/
+.env/
 
 # Node modules
+node_modules/
 frontend/node_modules/
+**/node_modules/
 
 # Python cache
 __pycache__/
 **/__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Poetry
+poetry.lock
 
 # Logs
 logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+.nyc_output
 
 # Compiled / build artifacts
 *.pyc
 *.pyo
 *.pyd
 *.sqlite3
+*.db
+
+# Frontend build
+frontend/dist/
+frontend/build/
+frontend/.next/
+frontend/.nuxt/
+frontend/.vuepress/dist/
+frontend/.serverless/
+frontend/.fusebox/
 
 # IDE configuration
 .idea/
 .vscode/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Docker
+.dockerignore
+
+# Alembic migrations (keep structure, ignore specific versions)
+backend/alembic/versions/*.py
+
+# Uploads and media
+uploads/
+media/
+
+# Test files
+test_*
+*_test.py
+tests/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# Database
+*.sqlite
+*.db-journal
+
+# SSL certificates
+*.pem
+*.key
+*.crt
+*.csr
+
+# Backup files
+*.bak
+*.backup
+*.old
