Добавил API_BASE_URL в .env.example

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 
 # Telegram Bot
 BOT_TOKEN=your_telegram_bot_token_here
+API_BASE_URL=http://bot_api:8000/api/v1
 
 # Администратор по умолчанию (временно отключен)
 ADMIN_USERNAME=admin
