--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,1 +1,75 @@
-.conf/pyproject.toml
+[tool.poetry]
+name = "ihearyou-bot"
+version = "1.0.0"
+description = "Telegram бот для сбора обращений пользователей с админ-панелью"
+authors = ["IHearYou Team"]
+readme = "README.MD"
+packages = [
+    {include = "bot"},
+    {include = "backend"}
+]
+
+[tool.poetry.dependencies]
+python = "^3.10"
+aiofiles = "24.1.0"
+aiogram = "3.20.0.post0"
+aiohappyeyeballs = "2.6.1"
+aiohttp = "3.11.18"
+aiosignal = "1.3.2"
+annotated-types = "0.7.0"
+asyncpg = "0.30.0"
+attrs = "25.3.0"
+certifi = "2025.4.26"
+frozendict = "2.4.6"
+frozenlist = "1.6.0"
+idna = "3.10"
+magic-filter = "1.0.12"
+multidict = "6.4.4"
+propcache = "0.3.1"
+psycopg2-binary = "2.9.10"
+pydantic = "2.11.5"
+pydantic_core = "2.33.2"
+python-dotenv = "1.1.0"
+typing-inspection = "0.4.1"
+typing_extensions = "4.13.2"
+yarl = "1.20.0"
+fastapi = "0.112.2"
+uvicorn = {extras = ["standard"], version = "0.30.6"}
+python-jose = {extras = ["cryptography"], version = "3.3.0"}
+passlib = {extras = ["bcrypt"], version = "1.7.4"}
+python-multipart = "0.0.9"
+SQLAlchemy = "2.0.34"
+watchfiles = "1.1.0"
+pydantic-settings = "2.0.3"
+alembic = "1.13.1"
+email-validator = "^2.3.0"
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "3.6.2"
+ruff = "0.8.4"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 120
+target-version = "py310"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "Q", "D"]
+ignore = ["E203", "D100", "D103", "D106", "D415", "D417", "E501"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["backend", "bot"]
+force-single-line = false
+lines-after-imports = 2
+split-on-trailing-comma = false
+
+[tool.ruff.format]
+quote-style = "double"
+docstring-code-format = true
+skip-magic-trailing-comma = false
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
