--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ watchfiles = "1.1.0"
 pydantic-settings = "2.0.3"
 alembic = "1.13.1"
 email-validator = "^2.3.0"
+apscheduler = "^3.11.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "3.6.2"
