--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 # База данных
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/ihearyou
+POSTGRES_PASSWORD=postgres
+POSTGRES_USER=postgres
+POSTGRES_DB=ihearyou
 
 # JWT настройки
 JWT_SECRET_KEY=your_secret_key_here
@@ -11,10 +14,6 @@ JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 BOT_TOKEN=your_telegram_bot_token_here
 API_BASE_URL=http://bot_api:8000/api/v1
 
-# Администратор по умолчанию (временно отключен)
+# Администратор по умолчанию
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin12345
-ADMIN_EMAIL=admin@example.com
-
-# Логирование
-LOG_LEVEL=INFO
