--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
         sleep 5 &&
         echo 'Running migrations...' &&
         alembic upgrade head &&
+        echo 'Loading flow data...' &&
+        python backend/load_flow_data.py &&
         echo 'Starting API server...' &&
         uvicorn backend.main:app --host 0.0.0.0 --port 8000
       "
@@ -85,5 +87,23 @@ services:
         - action: rebuild
           path: ./frontend/Dockerfile
 
+  pgadmin:
+    container_name: IHearYouPgAdmin
+    image: dpage/pgadmin4:latest
+    env_file: .env
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@admin.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    ports:
+      - "${PGADMIN_PORT:-8080}:80"
+    depends_on:
+      - db
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+    restart: unless-stopped
+
 volumes:
   pg_data:
+  pgadmin_data:
+
