--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ watchfiles = "1.1.0"
 pydantic-settings = "2.0.3"
 alembic = "1.13.1"
 email-validator = "^2.3.0"
+redis = "5.0.7"
+celery = "5.4.0"
+requests = "2.32.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "3.6.2"
