--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ email-validator = "^2.3.0"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "3.6.2"
 ruff = "0.8.4"
+pytest = "^8.4.2"
 
 [build-system]
 requires = ["poetry-core"]
