--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,11 @@ email-validator = "^2.3.0"
 pre-commit = "3.6.2"
 ruff = "0.8.4"
 pytest = "^8.4.2"
+pytest-asyncio = "^1.2.0"
+httpx = "^0.28.1"
+pytest-mock = "^3.15.1"
+aiosqlite = "^0.21.0"
+greenlet = "^3.2.4"
 
 [build-system]
 requires = ["poetry-core"]
