--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,19 @@
+# ============================================================================
+# ОСНОВНЫЕ НАСТРОЙКИ ПРИЛОЖЕНИЯ
+# ============================================================================
+
 # База данных
 DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/ihearyou
 POSTGRES_PASSWORD=postgres
 POSTGRES_USER=postgres
 POSTGRES_DB=ihearyou
+
+# Логирование
+LOG_LEVEL=INFO
+
+# ============================================================================
+# БЕЗОПАСНОСТЬ И АУТЕНТИФИКАЦИЯ
+# ============================================================================
 
 # JWT настройки
 JWT_SECRET_KEY=your_secret_key_here
@@ -10,10 +21,45 @@ JWT_ALGORITHM=HS256
 JWT_ACCESS_TOKEN_EXPIRE_MINUTES=60
 JWT_REFRESH_TOKEN_EXPIRE_DAYS=7
 
-# Telegram Bot
-BOT_TOKEN=your_telegram_bot_token_here
-API_BASE_URL=http://bot_api:8000/api/v1
-
-# Администратор по умолчанию
+# Администратор по умолчанию (создается при первом запуске)
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin12345
+ADMIN_EMAIL=admin@yourcompany.com
+
+# Admin секретные ключи (для Docker Compose)
+ADMIN_SECRET_KEY=your_very_secret_admin_key_change_in_production
+
+# ============================================================================
+# EMAIL ФУНКЦИОНАЛЬНОСТЬ
+# ============================================================================
+
+# Email настройки (SMTP конфигурация)
+MAIL_USERNAME=noreply@yourcompany.com
+MAIL_PASSWORD=your_app_password
+MAIL_FROM=noreply@yourcompany.com
+MAIL_PORT=587
+MAIL_SERVER=smtp.gmail.com
+MAIL_TLS=true
+MAIL_SSL=false
+
+# Email валидация (критично для входов, False - только для разработки)
+EMAIL_DNS_CHECK=false
+
+# Frontend URL для восстановления паролей
+FRONTEND_URL=http://localhost:3000
+
+# ============================================================================
+# TELEGRAM BOT ИНТЕГРАЦИЯ
+# ============================================================================
+
+# Bot токен и API настройки
+BOT_TOKEN=your_telegram_bot_token_here
+BOT_API_PORT=8001
+
+# ============================================================================
+# FRONTEND И ДОКЕР КОНФИГУРАЦИЯ
+# ============================================================================
+
+# Frontend настройки (используется Docker Compose)
+FRONTEND_API_URL=http://localhost:8001/api
+FRONTEND_PORT=3001
