--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,10 +43,15 @@ watchfiles = "1.1.0"
 pydantic-settings = "2.0.3"
 alembic = "1.13.1"
 email-validator = "^2.3.0"
+fastapi-mail = "1.4.1"
+apscheduler = "^3.11.0"
+python-telegram-bot = "^22.5"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "3.6.2"
 ruff = "0.8.4"
+pytest = "^8.4.2"
+aiosqlite = "^0.21.0"
 
 [build-system]
 requires = ["poetry-core"]
