--- a/.env.example
+++ b/.env.example
@@ -52,9 +52,28 @@ FRONTEND_URL=http://localhost:3000
 # TELEGRAM BOT ИНТЕГРАЦИЯ
 # ============================================================================
 
-# Bot токен и API настройки
+# Bot токен (ОБЯЗАТЕЛЬНО для бота)
 BOT_TOKEN=your_telegram_bot_token_here
+
+# API настройки для бота
+API_BASE_URL=http://bot_api:8000
+API_TIMEOUT=30
+API_MAX_RETRIES=3
+
+# Webhook настройки (для продакшена)
+WEBHOOK_URL=https://yourdomain.com/webhook
+WEBHOOK_SECRET=your_secret_webhook_token
+
+# Настройки напоминаний
+INACTIVE_DAYS_THRESHOLD=10
+REMINDER_COOLDOWN_DAYS=10
+
+# API порт бэкенда (должен совпадать с BOT_API_PORT)
 BOT_API_PORT=8001
+
+# Окружение
+ENVIRONMENT=development
+LOG_LEVEL=INFO
 
 # ============================================================================
 # FRONTEND И ДОКЕР КОНФИГУРАЦИЯ
@@ -63,3 +82,4 @@ BOT_API_PORT=8001
 # Frontend настройки (используется Docker Compose)
 FRONTEND_API_URL=http://localhost:8001/api
 FRONTEND_PORT=3001
+
