--- a/.env.example
+++ b/.env.example
@@ -71,9 +71,12 @@ REMINDER_COOLDOWN_DAYS=10
 # API порт бэкенда (должен совпадать с BOT_API_PORT)
 BOT_API_PORT=8001
 
+# Redis (для кэширования и состояний)
+REDIS_URL=redis://redis:6379/0
+
 # Окружение
 ENVIRONMENT=development
-LOG_LEVEL=INFO
+DEBUG=false
 
 # ============================================================================
 # FRONTEND И ДОКЕР КОНФИГУРАЦИЯ
