Обновление инфры и make

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,14 @@
 # ============================================================================
+# КОНФИГУРАЦИЯ IHearYou BOT PROJEKT
+# ============================================================================
+# 
+# ИНСТРУКЦИЯ:
+# 1. Скопируйте этот файл в .env: cp .env.example .env
+# 2. Получите BOT_TOKEN у @BotFather в Telegram
+# 3. Установите BOT_TOKEN в .env файле
+# 4. Запустите: make setup
+# 
+# ============================================================================
 # ОСНОВНЫЕ НАСТРОЙКИ ПРИЛОЖЕНИЯ
 # ============================================================================
 
@@ -52,7 +62,7 @@ FRONTEND_URL=http://localhost:3000
 # TELEGRAM BOT ИНТЕГРАЦИЯ
 # ============================================================================
 
-# Bot токен (ОБЯЗАТЕЛЬНО для бота)
+# Bot токен (ОБЯЗАТЕЛЬНО для бота) - получите у @BotFather
 BOT_TOKEN=your_telegram_bot_token_here
 
 # API настройки для бота
