--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ redis = "^5.0.0"
 aioredis = "^2.0.0"
 
 # Database
-asyncpg = "^0.29.0"
+asyncpg = ">=0.30.0"
 SQLAlchemy = "^2.0.0"
 alembic = "^1.12.0"
 
@@ -77,6 +77,7 @@ pytest-cov = "^4.1.0"
 
 # Development database
 aiosqlite = "^0.21.0"
+pytest-freezer = "^0.4.9"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.4.2"
