Исключение тестов из проверки линтера
- Обновлен .pre-commit-config.yaml для исключения папки tests/
- Добавлена секция exclude в pyproject.toml для ruff
- Тесты и alembic миграции больше не проверяются линтером
- Улучшена производительность pre-commit хуков

--- a/.gitignore
+++ b/.gitignore
@@ -102,11 +102,6 @@ Thumbs.db
 uploads/
 media/
 
-# Test files
-test_*
-*_test.py
-tests/
-
 # Temporary files
 *.tmp
 *.temp
@@ -126,3 +121,13 @@ tests/
 *.bak
 *.backup
 *.old
+
+# Test cache
+htmlcov/
+.coverage
+.coverage.*
+.pytest_cache/
+.ruff_cache/
+
+# Ruff cache
+.ruff_cache/
