--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,6 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
-        files: ^backend/(?!alembic/).*\.py$
+        files: ^backend/(?!alembic/|tests/).*\.py$
       - id: ruff-format
-        files: ^backend/(?!alembic/).*\.py$
+        files: ^backend/(?!alembic/|tests/).*\.py$
