--- a/.env.example
+++ b/.env.example
@@ -93,6 +93,6 @@ DEBUG=false
 # ============================================================================
 
 # Frontend настройки (используется Docker Compose)
-FRONTEND_API_URL=http://localhost:8001/api
+VITE_API_URL=http://localhost:8001/api
 FRONTEND_PORT=3001
 
